[gd_scene load_steps=10 format=3 uid="uid://bxftulcfsy8ci"]

[ext_resource type="Script" uid="uid://vk4qolvsho7o" path="res://GUI/PauseMenu/pause_menu.gd" id="1_2mjep"]
[ext_resource type="Texture2D" uid="uid://cawo7lhy74qyt" path="res://ASSETS/HUD/coffee_back_spritesheet_padded.png" id="2_mqpij"]
[ext_resource type="Shader" uid="uid://oiygmccmcyhm" path="res://ASSETS/SHADERS/blur.gdshader" id="3_5jsve"]
[ext_resource type="Theme" uid="uid://v3g7k24h8ox3" path="res://GUI/UITHEME.tres" id="4_cqli2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cqli2"]
atlas = ExtResource("2_mqpij")
region = Rect2(2, 2, 398, 224)

[sub_resource type="Animation" id="Animation_5jsve"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(2, 2, 398, 224)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.2)]
}

[sub_resource type="Animation" id="Animation_mqpij"]
resource_name = "defaultplay"
length = 4.0
loop_mode = 1
step = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.33333334, 0.66666675, 1, 1.3333334, 1.6666666, 2, 2.3333333, 2.6666667, 3, 3.3333333, 3.6666667, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(2, 2, 398, 224), Rect2(404, 2, 398, 224), Rect2(806, 2, 398, 224), Rect2(1208, 2, 398, 224), Rect2(1610, 2, 398, 224), Rect2(2012, 2, 398, 224), Rect2(2414, 2, 398, 224), Rect2(2816, 2, 398, 224), Rect2(3218, 2, 398, 224), Rect2(3620, 2, 398, 224), Rect2(4022, 2, 398, 224), Rect2(4424, 2, 398, 224), Rect2(4826, 2, 398, 224)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.4420302),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cqli2"]
_data = {
&"RESET": SubResource("Animation_5jsve"),
&"defaultplay": SubResource("Animation_mqpij")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cqli2"]
shader = ExtResource("3_5jsve")
shader_parameter/blur_amount = 0.0
shader_parameter/tint = Color(0, 0, 0, 1)
shader_parameter/tint_strength = 0.0
shader_parameter/saturation = 0.6000000285

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 3
script = ExtResource("1_2mjep")

[node name="TextureRect" type="TextureRect" parent="."]
unique_name_in_owner = true
process_mode = 3
modulate = Color(1, 1, 1, 0.2)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("AtlasTexture_cqli2")
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
process_mode = 3
libraries = {
&"": SubResource("AnimationLibrary_cqli2")
}
autoplay = "defaultplay"

[node name="ColorRect" type="ColorRect" parent="."]
unique_name_in_owner = true
process_mode = 3
material = SubResource("ShaderMaterial_cqli2")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="MainMarginContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
z_index = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
theme = ExtResource("4_cqli2")
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MainMarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MainMarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0
theme_override_constants/separation = 15

[node name="ExitGameButton" type="Button" parent="MainMarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../MainMenuButton")
focus_neighbor_bottom = NodePath("../../HBoxContainer3/VoicesButton")
focus_next = NodePath("../MainMenuButton")
focus_previous = NodePath("../../HBoxContainer7/LoadButton")
text = "QUIT"

[node name="MainMenuButton" type="Button" parent="MainMarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../ExitGameButton")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../ControlsButton")
focus_neighbor_bottom = NodePath("../../HBoxContainer3/VoicesButton")
focus_next = NodePath("../../HBoxContainer5/CloseButton")
focus_previous = NodePath("../ExitGameButton")
text = "MAIN MENU"

[node name="ControlsButton" type="Button" parent="MainMarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../MainMenuButton")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../HBoxContainer3/VoicesButton")
focus_next = NodePath("../../HBoxContainer3/VoicesButton")
focus_previous = NodePath("../MainMenuButton")
text = "CONTROLS"

[node name="HBoxContainer2" type="HBoxContainer" parent="MainMarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0

[node name="HSeparator" type="HSeparator" parent="MainMarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AnnouncerLabel" type="Label" parent="MainMarginContainer/VBoxContainer/HBoxContainer2"]
z_index = 2
layout_mode = 2
mouse_filter = 0
text = "PAUSED"

[node name="HSeparator2" type="HSeparator" parent="MainMarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="MainMarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0

[node name="VoicesButton" type="Button" parent="MainMarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
focus_neighbor_left = NodePath("../../HBoxContainer/ExitGameButton")
focus_neighbor_top = NodePath("../../HBoxContainer/MainMenuButton")
focus_neighbor_right = NodePath("../../HBoxContainer/ControlsButton")
focus_neighbor_bottom = NodePath("../../HBoxContainer5/CloseButton")
focus_next = NodePath("../../HBoxContainer5/CloseButton")
focus_previous = NodePath("../../HBoxContainer/ControlsButton")
text = "Voices ON"

[node name="HBoxContainer4" type="HBoxContainer" parent="MainMarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0

[node name="HBoxContainer5" type="HBoxContainer" parent="MainMarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0

[node name="CloseButton" type="Button" parent="MainMarginContainer/VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
size_flags_horizontal = 6
focus_neighbor_left = NodePath("../../HBoxContainer7/SaveButton")
focus_neighbor_top = NodePath("../../HBoxContainer3/VoicesButton")
focus_neighbor_right = NodePath("../../HBoxContainer7/LoadButton")
focus_neighbor_bottom = NodePath("../../HBoxContainer7/SaveButton")
focus_next = NodePath("../../HBoxContainer7/SaveButton")
focus_previous = NodePath("../../HBoxContainer/MainMenuButton")
text = "CLOSE"

[node name="HBoxContainer6" type="HBoxContainer" parent="MainMarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0

[node name="HBoxContainer7" type="HBoxContainer" parent="MainMarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0

[node name="HSeparator" type="HSeparator" parent="MainMarginContainer/VBoxContainer/HBoxContainer7"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SaveButton" type="Button" parent="MainMarginContainer/VBoxContainer/HBoxContainer7"]
unique_name_in_owner = true
process_mode = 3
z_index = 2
layout_mode = 2
focus_neighbor_left = NodePath("../LoadButton")
focus_neighbor_top = NodePath("../../HBoxContainer5/CloseButton")
focus_neighbor_right = NodePath("../LoadButton")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../LoadButton")
focus_previous = NodePath("../../HBoxContainer5/CloseButton")
text = "SAVE"

[node name="HSeparator2" type="HSeparator" parent="MainMarginContainer/VBoxContainer/HBoxContainer7"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="LoadButton" type="Button" parent="MainMarginContainer/VBoxContainer/HBoxContainer7"]
unique_name_in_owner = true
process_mode = 3
z_index = 2
layout_mode = 2
focus_neighbor_left = NodePath("../SaveButton")
focus_neighbor_top = NodePath("../../HBoxContainer5/CloseButton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath("../SaveButton")
text = "LOAD"

[node name="HSeparator3" type="HSeparator" parent="MainMarginContainer/VBoxContainer/HBoxContainer7"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ControlsMarginContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
z_index = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
theme = ExtResource("4_cqli2")
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="ControlsMarginContainer"]
layout_mode = 2

[node name="ControlsBack" type="Button" parent="ControlsMarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "BACK"

[node name="HBoxContainer" type="HBoxContainer" parent="ControlsMarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Title" type="Label" parent="ControlsMarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "CONTROLS"

[node name="GridContainer" type="GridContainer" parent="ControlsMarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/v_separation = 8

[node name="Label5" type="Label" parent="ControlsMarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "MENU: ESC"

[node name="Label" type="Label" parent="ControlsMarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "UP : W, UpArrow"

[node name="Label2" type="Label" parent="ControlsMarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "DOWN: S, DownArrow"

[node name="Label3" type="Label" parent="ControlsMarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "LEFT: A, LeftArrow"

[node name="Label4" type="Label" parent="ControlsMarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "RIGHT: D, RightArrow"

[node name="Label6" type="Label" parent="ControlsMarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "CONFIRM/ATTACK: Z, M ,SpaceBar"

[node name="Label7" type="Label" parent="ControlsMarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "THROW SAUSAGE: X, >"

[node name="Label8" type="Label" parent="ControlsMarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "CANCEL: V, /"

[node name="Label9" type="Label" parent="ControlsMarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "INTERACT: E, C, <"

[node name="Label10" type="Label" parent="ControlsMarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "INVENTORY: ~, I"
